# MR2018

./: .gitignore  CMakeLists.txt  README.md  credit.c  library.c  library.h  libraryvb.h  main.c  matrix.h  notes.c  webserver.c
0_SafronovNA/web_nn_service/: CMakeLists.txt  README.txt  licence.txt
0_SafronovNA/web_nn_service/client/: tcp_client.cpp
0_SafronovNA/web_nn_service/server/: install_daemon.sh  tcp_server.cpp  web_nn_server.service
0_SafronovNA/web_nn_service/tests/tf_engine_test/: postprocess_utils_test.cpp  tf_engine_test.cpp
0_SafronovNA/web_nn_service/tf_model/: engine.cpp  engine.h  postprocess_utils.cpp  postprocess_utils.h
0_SafronovNA/web_nn_service/utils/: config.h  structures.h
5555/: CMakeLists.txt  bibl.h
AndreyCH/: CMakeLists.txt  S1.cpp  S1.h  main.c  main.cpp
Artyrrr/: CMakeLists.txt  list.c  mylibrary.c
Elizaveta/: CMakeLists.txt  Elib.c  Elib.h  Emain.c  lib.cpp  lib.h  webserver.c
Elizaveta/MatrixC++/: CMakeLists.txt  Elib2.cpp  Elib2.h  Matrix2.cpp
Elizaveta/MatrixCL/: Elib.c  Elib.h  MatrixL.c  testmultiply.c
Elizaveta/MatrixCXX/: CMakeLists.txt  Elib2.cpp  Elib2.h  Matrix2.cpp
Elizaveta/algorithms/: lib.cpp  lib.h  main.cpp
Elizaveta/tests/: new.c
Maxim/: CMakeLists.txt  Matrixlib.h  Project1.sln  Structs.c  mainMatr.c  notes.c
NikitaKhalyavin/CPPtest/: CMakeLists.txt  MatrLib.cpp  MatrLib.h  testex.cpp
NikitaKhalyavin/CPPtest/tests/: TestingLib.cpp  TestingLib.h  testEigen.cpp  testExp.cpp  testInvert.cpp  testOne.cpp  testZero.cpp
NikitaKhalyavin/Deicstra/: CMakeLists.txt  NKhDeicstra.cpp  NKhDeicstraLib.cpp  NKhDeicstraLib.h  курсач.docx
NikitaKhalyavin/find/: ArraySort.cpp  ArraySort.h  CMakeLists.txt  NKhMainFind.cpp  findInArray.cpp  findInArray.h  structs.cpp  structs.h  trees.cpp  trees.h  Сложность алгоритмов.docx
NikitaKhalyavin/find/graphs/: parentGraph.cpp  parentGraph.h
NikitaKhalyavin/find/heaps/: abstractHeap.cpp  abstractHeap.h  binaryHeap.cpp  binaryHeap.h
NikitaKhalyavin/find/tests/: allSortTest.cpp  testChange.cpp  testHeap.cpp  testStructs.cpp
NikitaKhalyavin/find/trees/: RBTree.cpp  RBTree.h  binaryTree.cpp  binaryTree.h  treesParent.cpp  treesParent.h
Sibiryakov.va/: CMakeLists.txt  SVAlibrary.c  SVAlibrary.h  SVAmaintarget.c  SVAwebserver.c  just4test.c  main.c  matrix.c  matrix.h  mylibrary.c  mylibrary.h  socket.h  webserver.c
Sibiryakov.va/Algorythms/: CMakeLists.txt  array_algorytms.c
Sibiryakov.va/MatrixOperationC/: CMakeLists.txt  SVAwebserver.c  matrix.c  matrix.h
Sibiryakov.va/MatrixOperationC/SVAtests/: test_eigen_values.c  test_multiplication.c  test_summatrix.c  test_trace.c  test_trans_matrix.c
Sibiryakov.va/MatrixOperationCpp/: CMakeLists.txt  MatrixOperation.cpp  MatrixOperation.h
Sibiryakov.va/MatrixOperationCpp/testsOperations/: SVATestDetCpp.cpp  SVATestExpCpp.cpp  SVATestInvertCpp.cpp  SVATestMultiCpp.cpp  SVATestMultiScalarCpp.cpp  SVATestOneCpp.cpp  SVATestPowerCpp.cpp  SVATestPrintCpp.cpp  SVATestRandomCpp.cpp  SVATestSumCpp.cpp  SVATestTraceCpp.cpp  SVATestTransCpp.cpp  SVATestZeroCpp.cpp
Sibiryakov.va/SVAtests/: test_determinant.c  test_invert.c  test_mult_scalar.c  test_multiplication.c  test_trace.c  test_trans_matrix.c
VladBurin/: CMakeLists.txt  Library.c  Library.h  MainVcpp.cpp  main.c  mainV.c  mainVB2.c  webserverVB.c
VladBurin/Matrix/: CMakeLists.txt  MatrixOperations.c  MatrixOperations.h  matrix.cpp  matrix.h  КурсоваяБуринВ.В. 33335.2.docx
VladBurin/Matrix/TestsVB/: TestDeterminantVB.c  TestDeterminantVB.cpp  TestExponentVB.cpp  TestInvertVB.cpp  TestMultScalarVB.cpp  TestMultVB.cpp  TestOneVB.cpp  TestPowerVB.cpp  TestRandVB.cpp  TestSumVB.cpp  TestTraceVB.cpp  TestTransVB.cpp  TestZeroVB.cpp
Vlbager/: CMakeLists.txt  Testlib.c  Testlib.h  main.c  matrix.c  matrix.h  mylibrary.c  mylibrary.h  test.c  webserver.c
Vlbager/MatrixC/: CMakeLists.txt  matrix.c
Vlbager/MatrixC/tests/: eigen.c  exp.c  invert.c  mult.c  mult__scalar.c  one.c  power.c  rand.c  sum.c  trans.c  zero.c
Vlbager/MatrixCpp/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  matrix.hpp
Vlbager/Topological Sorting/: Report.docx
Vlbager/Topological_Sorting/: CMakeLists.txt  Report.docx  source.cpp  source.h  test.cpp
Vlbager/matrixtests/: determinant.c  invert.c  one.c  sum.c  trace.c  zero.c
Vlbager/tests/: pseudotest1.c  pseudotest2.c  simpletest.c
Vlbager/webserver_linux/: CMakeLists.txt
komarov.ae/KomarovMatrixC/: CMakeLists.txt  komarovMainC.c  komarovMatrixC.c  komarovMatrixLibC.h
komarov.ae/KomarovMatrixC/tests/: AlKomTestDeterminant.c  AlKomTestMatrix_Sum.c
natalia/: main.c  (+8 more)
natalia/first_cplus/: CMakeLists.txt
natalia/first_cplus/src/: ClassMatrix.cpp  ClassMatrix.h  matrixplus.cpp  matrixplus.h
natalia/first_cplus/testmatrixplus/: test_main.cpp  testmatrixplus.cpp
natalia/keil_3lab/: CMakeLists.txt  eval1.c  eval1.h  main.c
natalia/keil_3lab/.circleci/: Dockerfile  config.yml
natalia/keil_3lab/.test/: date_checker.sh  run_tests.sh  tests.c
natalia/keil_3lab/lst/: dummy.map  startup_stm32f103xb.lst
natalia/keil_3lab/src/main/: CMakeLists.txt  bitmagic.c  bitmagic.h  eval1.c  main.c
natalia/keil_3lab/src/mcu_support_package/: system_stm32f10x.c
natalia/lib_for_tests/: CMakeLists.txt  library.c  library.h
natalia/matrix_2/test_matrix/: CMakeLists.txt  gtest_matrix_1_main.cpp  test_matrix_1.cpp
natalia/matrix_2/test_matrix/gtest/: gtest.cc
natalia/matrix_2/test_matrix/gtest/gtest/: gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-test-part.h  gtest.h
natalia/matrix_2/test_matrix/gtest/gtest/internal/: gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h
natalia/test01/: CMakeLists.txt  library.c  library.h  main.c  mytests.c
shayahmetov.rh/: CMakeLists.txt  README.md  librain.c
shayahmetov.rh/Matrix library/: main.cpp  matrix.cpp  matrix.h
shayahmetov.rh/Matrix_library/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
shayahmetov.rh/Sourse/: librain.h  main.c  matrix.c  matrix.h  notes.c
shayahmetov.rh/Test/: TestMatrixLib.c
(+334 files in other folders)
