cmake_minimum_required(VERSION 3.9)
project(MR2018)

set(CMAKE_C_STANDARD 11)

add_executable(MR2018 main.c)

add_subdirectory(5555)
add_subdirectory(AndreyCH)
add_subdirectory(Elizaveta)
add_subdirectory(komarov.ae)
add_subdirectory(ksenya)
add_subdirectory(kurshakov.ga)
add_subdirectory(librarypk)
add_subdirectory(marias)
add_subdirectory(Maxim)
add_subdirectory(natalia)
add_subdirectory(Nenahov)
add_subdirectory(NikitaKhalyavin)
add_subdirectory(Schebnev)
add_subdirectory(shayahmetov.rh)
add_subdirectory(Sibiryakov.va)
add_subdirectory(VladBurin)
add_subdirectory(Vlbager)
add_subdirectory(VolkAl)
add_subdirectory(vorobieva.vb)
add_subdirectory(zamorin.ns)


