cmake_minimum_required(VERSION 3.9)
project(Sibiryakov.va)

set(CMAKE_CPP_STANDARD 14)

set(ENABLETESTS TRUE)

set(SOURCE_LIB MatrixOperation.cpp)

link_libraries(ws2_32 wsock32)

add_library(SVAMatrixLibraryCpp ${SOURCE_LIB})

if(ENABLETESTS)
    enable_testing()

    add_executable(SVATestTraceCpp testsOperations/SVATestTraceCpp.cpp)
    add_executable(SVATestSumCpp testsOperations/SVATestSumCpp.cpp)
    add_executable(SVATestMultiCpp testsOperations/SVATestMultiCpp.cpp)
    add_executable(SVATestDetCpp testsOperations/SVATestDetCpp.cpp)
    add_executable(SVATestMultiScalarCpp testsOperations/SVATestMultiScalarCpp.cpp)
    add_executable(SVATestTransCpp testsOperations/SVATestTransCpp.cpp)
    add_executable(SVATestInvertCpp testsOperations/SVATestInvertCpp.cpp)
    add_executable(SVATestExpCpp testsOperations/SVATestExpCpp.cpp)
    add_executable(SVATestPowerCpp testsOperations/SVATestPowerCpp.cpp)
    add_executable(SVATestOneCpp testsOperations/SVATestOneCpp.cpp)
    add_executable(SVATestPrintCpp testsOperations/SVATestPrintCpp.cpp)
    add_executable(SVATestZeroCpp testsOperations/SVATestZeroCpp.cpp)
    add_executable(SVATestRandomCpp testsOperations/SVATestRandomCpp.cpp)

    add_test(NAME SVATestMatrixCpp01 COMMAND SVATestTraceCpp)
    add_test(NAME SVATestMatrixCpp02 COMMAND SVATestSumCpp)
    add_test(NAME SVATestMatrixCpp03 COMMAND SVATestMultiCpp)
    add_test(NAME SVATestMatrixCpp04 COMMAND SVATestMultiScalarCpp)
    add_test(NAME SVATestMatrixCpp05 COMMAND SVATestTransCpp)
    add_test(NAME SVATestMatrixCpp06 COMMAND SVATestInvertCpp)
    add_test(NAME SVATestMatrixCpp07 COMMAND SVATestExpCpp)
    add_test(NAME SVATestMatrixCpp08 COMMAND SVATestPowerCpp)
    add_test(NAME SVATestMatrixCpp09 COMMAND SVATestOneCpp)
    add_test(NAME SVATestMatrixCpp10 COMMAND SVATestPrintCpp)
    add_test(NAME SVATestMatrixCpp11 COMMAND SVATestZeroCpp)
    add_test(NAME SVATestMatrixCpp12 COMMAND SVATestRandomCpp)
    add_test(NAME SVATestMatrixCpp13 COMMAND SVATestDetCpp)

    add_library(SVAMatrixLibrCpp EXCLUDE_FROM_ALL STATIC  MatrixOperation.cpp)
    target_link_libraries(SVATestTraceCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestSumCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestMultiCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestMultiScalarCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestTransCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestInvertCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestExpCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestPowerCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestOneCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestPrintCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestZeroCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestRandomCpp SVAMatrixLibrCpp)
    target_link_libraries(SVATestDetCpp SVAMatrixLibrCpp)
endif()

add_executable(SVAMatrixCpp MatrixOperation.cpp)
