cmake_minimum_required(VERSION 3.9)
project(VlbagerMatrixC)

set(CMAKE_C_STANDARD 11)

set(ENABLETESTS FALSE)

if(ENABLETESTS)
    enable_testing()

    add_executable(VlbagerMatrixDeterminantTest tests/determinant.c)
    add_executable(VlbagerMatrixTraceTest tests/trace.c)
    add_executable(VlbagerMatrixOneTest tests/one.c)
    add_executable(VlbagerMatrixZeroTest tests/zero.c)
    add_executable(VlbagerMatrixSumTest tests/sum.c)
    add_executable(VlbagerMatrixTransTest tests/trans.c)
    add_executable(VlbagerMatrixMultTest tests/mult.c)
    add_executable(VlbagerMatrixMultScalarTest tests/mult__scalar.c)
    add_executable(VlbagerMatrixInvertTest tests/invert.c)
    add_executable(VlbagerMatrixPowerTest tests/power.c)
    add_executable(VlbagerMatrixRandomTest tests/rand.c)
    add_executable(VlbagerMatrixExpTest tests/exp.c)
    add_executable(VlbagerMatrixEigenTest tests/eigen.c)

    add_test(NAME DeterminantTest COMMAND VlbagerMatrixDeterminantTest)
    add_test(NAME TraceTest COMMAND VlbagerMatrixTraceTest)
    add_test(NAME OneTest COMMAND VlbagerMatrixOneTest)
    add_test(NAME ZeroTest COMMAND VlbagerMatrixZeroTest)
    add_test(NAME SumTest COMMAND VlbagerMatrixSumTest)
    add_test(NAME TransposeTest COMMAND VlbagerMatrixTransTest)
    add_test(NAME MultiplyTest COMMAND VlbagerMatrixMultTest)
    add_test(NAME MultiplyScalarTest COMMAND VlbagerMatrixMultScalarTest)
    add_test(NAME InvertTest COMMAND VlbagerMatrixInvertTest)
    add_test(NAME PowerTest COMMAND VlbagerMatrixPowerTest)
    add_test(NAME RandomTest COMMAND VlbagerMatrixRandomTest)
    add_test(NAME ExpTest COMMAND VlbagerMatrixExpTest)
    add_test(NAME EigenValuesAndVectorsTest COMMAND VlbagerMatrixEigenTest)

    add_library(VlbagerMatrixLib EXCLUDE_FROM_ALL STATIC matrix.c)

    target_link_libraries(VlbagerMatrixDeterminantTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixTraceTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixOneTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixZeroTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixSumTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixTransTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixMultTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixMultScalarTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixInvertTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixPowerTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixRandomTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixExpTest VlbagerMatrixLib)
    target_link_libraries(VlbagerMatrixEigenTest VlbagerMatrixLib)

endif()
